use immutable set for BUILTIN_PROVIDER_NAMES